# Qtile-Config

./: .gitmodules  README.md  libs-ubuntu.txt  pyproject.toml
qtile_config/: config.py
