[tool.poetry]
name = "qtile-config"
version = "0.1.0"
description = ""
authors = ["Otavio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"
packages = [{include = "qtile_config"}]

[tool.poetry.dependencies]
python = "^3.11"
dbus-next = "^0.2.3"
xcffib = "^1.4.0"
pywlroots = "^0.16.4"
pywayland = "^0.4.16"
xkbcommon = "^0.8"
cairocffi = "^1.6.1"
psutil = "^5.9.5"
fontawesome = "^5.10.1.post1"
pyyaml = "^6.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
